--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ ctrlc = "^3"
 chrono = "^0"
 anyhow = "^1"
 tracing = "^0"
-pcapture = { version = "^0", path = "../pcapture-rs" }
+pcapture = "^0"
 tracing-subscriber = "^0"
 clap = { version="^4", features=["derive"] }
 pnet = { version = "^0", features = ["serde"] }
@@ -28,6 +28,6 @@ codegen-units = 1
 lto = true
 
 [features]
-default = ["libpcap"]
+default = ["libpnet"]
 libpnet = ["pcapture/pcapng", "pcapture/libpnet"]
 libpcap = ["pcapture/pcapng", "pcapture/libpcap"]
