--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ tracing-subscriber = "^0"
 clap = { version="^4", features=["derive"] }
 pnet = { version = "^0", features = ["serde"] }
 serde = { version = "^1", features = ["derive"]}
+serde_json = "^1"
 bincode = { version = "^2", features = ["serde"] }
 tokio = { version = "^1", features = ["full"] }
 regex = "^1"
+hostname = "^0"
 
 [profile.release]
 codegen-units = 1
